update for gated data all-cell-data-FFT.filtered.2024-02-22.tsv

--- a/BIO00066I-template.qmd
+++ b/BIO00066I-template.qmd
@@ -14,6 +14,11 @@ format:
 editor: source
 ---
 
+\setmainfont{Times New Roman}
+
+Greek letters: rho $\rho$
+
+
 **Colour scheme**
 
 In these workshops, we highlight some elements in boxes like this:
