--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,16 @@
 ---
-title: "BIO00066I"
-subtitle: "Becoming a Bioscientist: Research in Action"
+title: "BIO00087H"
+subtitle: "Genomics"
+author: "Daniel Jeffares"
+date: 2024-02-21
 
-author: Daniel Jeffares
-date: 2024-01-30
 ---
 
-This website is for the module Becoming a Bioscientist: Research in Action - BIO00066I.
 
-You can see [the module description here](https://www.york.ac.uk/students/studying/manage/programmes/module-catalogue/module/BIO00066I/latest)
+Genomics has become one fundamental component of biological science. It is used in biomedicine, ecology, industrial microbiology, cell biology and evolutionary genetics. This is a relatively new discipline, that uses its own computational methods and concepts. This module teaches the current state of the art in genomic science and genome data analysis. Topics include genome biology in the tree of life, genome function, evolutionary concepts, collaborative projects and databases and ethics. This module will explain current DNA/RNA sequencing technologies, genome assembly, annotation and interpretation of genomic data. Workshops will provide an opportunity to develop skills and awareness of a variety of data analysis methods.
+
+The module summary is [here](https://www.york.ac.uk/students/studying/manage/programmes/module-catalogue/module/BIO00087H/latest)
+
+
+
 
